fix(env): update Oracle connection configuration to use connect alias

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ APP_URL=http://localhost:3000
 
 ORACLE_USER=ADMIN
 ORACLE_PASSWORD=WGQUx~g-33$03222017,LXgM?Sah8
-ORACLE_CONNECT_STRING=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.ap-singapore-1.oraclecloud.com))(connect_data=(service_name=g4e4b21e335ef70_pawliedb_medium.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+ORACLE_CONNECT_ALIAS=pawliedb_medium
 
 # JWT
 JWT_SECRET=f9qXxYZ8E6Vj6Uu2l9w9JZXvLj6gnFbWcV7+Q0v1bH9n4a3XzsyyA==
