fix(env): update Oracle connection details to include host, port, and service name

--- a/.env
+++ b/.env
@@ -13,7 +13,9 @@ APP_URL=http://localhost:3000
 
 ORACLE_USER=ADMIN
 ORACLE_PASSWORD=WGQUx~g-33$03222017,LXgM?Sah8
-ORACLE_CONNECT_ALIAS=pawliedb_medium
+ORACLE_HOST=adb.ap-singapore-1.oraclecloud.com
+ORACLE_PORT=1522
+ORACLE_SERVICE_NAME=g4e4b21e335ef70_pawliedb_medium.adb.oraclecloud.com
 
 # JWT
 JWT_SECRET=f9qXxYZ8E6Vj6Uu2l9w9JZXvLj6gnFbWcV7+Q0v1bH9n4a3XzsyyA==
